syntax = "proto3";

package configure;
option go_package = "./v1;v1";

import "configure_auth.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "configure_env.proto";
import "configure_server.proto";
import "configure_resource.proto";
import "configure_resource_value.proto";
import "configure_resource_server.proto";
import "configure_business.proto";
import "configure_business_value.proto";
import "configure_template.proto";
import "configure_configure.proto";

service Service {

  // 用户登录
  rpc Login(LoginRequest) returns(LoginReply){
    option (google.api.http) = {
      post: "/configure/v1/login",
      body: "*"
    };
  }

  // RefreshToken 刷新token
  rpc RefreshToken(google.protobuf.Empty) returns(RefreshTokenReply){
    option (google.api.http) = {
      post: "/configure/v1/token/refresh",
    };
  }

  // AllEnv 获取全部环境
  rpc AllEnv (google.protobuf.Empty) returns (AllEnvReply) {
    option (google.api.http) = {
      get: "/configure/v1/envs",
    };
  }

  // AddEnv 添加环境
  rpc AddEnv (AddEnvRequest) returns (AddEnvReply) {
    option (google.api.http) = {
      post: "/configure/v1/env",
      body:"*",
    };
  }

  // UpdateEnv 更新环境信息
  rpc UpdateEnv (UpdateEnvRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/configure/v1/env",
      body:"*"
    };
  }

  // DeleteEnv 删除环境信息
  rpc DeleteEnv (DeleteEnvRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/configure/v1/env"
    };
  }

  // GetEnvToken 获取环境token
  rpc GetEnvToken (GetEnvTokenRequest) returns (GetEnvTokenReply) {
    option (google.api.http) = {
      get: "/configure/v1/env/token"
    };
  }

  // ResetEnvToken 重置环境token
  rpc ResetEnvToken (ResetEnvTokenRequest) returns (ResetEnvTokenReply) {
    option (google.api.http) = {
      put: "/configure/v1/env/token",
      body:"*"
    };
  }

  rpc PageServer (PageServerRequest) returns (PageServerReply) {
    option (google.api.http) = {
      get: "/configure/v1/servers",
    };
  }

  rpc GetServer (GetServerRequest) returns (GetServerReply) {
    option (google.api.http) = {
      get: "/configure/v1/server",
      response_body: "server"
    };
  }

  rpc AddServer (AddServerRequest) returns (AddServerReply) {
    option (google.api.http) = {
      post: "/configure/v1/server",
      body:"*"
    };
  }

  rpc UpdateServer (UpdateServerRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/configure/v1/server",
      body:"*"
    };
  }

  rpc DeleteServer (DeleteServerRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/configure/v1/server"
    };
  }

  rpc PageResource (PageResourceRequest) returns (PageResourceReply) {
    option (google.api.http) = {
      get: "/configure/v1/resources"
    };
  }

  rpc AddResource (AddResourceRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/configure/v1/resource",
      body:"*"
    };
  }

  rpc UpdateResource (UpdateResourceRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/configure/v1/resource",
      body:"*"
    };
  }

  rpc DeleteResource (DeleteResourceRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/configure/v1/resource"
    };
  }

  rpc AllResourceServer (AllResourceServerRequest) returns (AllResourceServerReply) {
    option (google.api.http) = {
      get: "/configure/v1/resource/servers",
    };
  }

  rpc PageServerResource (PageServerResourceRequest) returns (PageServerResourceReply) {
    option (google.api.http) = {
      get: "/configure/v1/server/resources",
    };
  }

  rpc AllResourceValue (AllResourceValueRequest) returns (AllResourceValueReply) {
    option (google.api.http) = {
      get: "/configure/v1/resource/values",
      response_body: "list"
    };
  }

  rpc UpdateResourceValue (UpdateResourceValueRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/configure/v1/resource/value",
      body:"*"
    };
  }

  rpc PageBusiness (PageBusinessRequest) returns (PageBusinessReply) {
    option (google.api.http) = {
      get: "/configure/v1/business"
    };
  }

  rpc AddBusiness (AddBusinessRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/configure/v1/business",
      body:"*"
    };
  }

  rpc UpdateBusiness (UpdateBusinessRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/configure/v1/business",
      body:"*"
    };
  }

  rpc DeleteBusiness (DeleteBusinessRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/configure/v1/business"
    };
  }

  rpc AllBusinessValue (AllBusinessValueRequest) returns (AllBusinessValueReply) {
    option (google.api.http) = {
      get: "/configure/v1/business/values"
    };
  }


  rpc UpdateBusinessValue (UpdateBusinessValueRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/configure/v1/business/value",
      body:"*"
    };
  }

  rpc PageTemplate (PageTemplateRequest) returns (PageTemplateReply) {
    option (google.api.http) = {
      get: "/configure/v1/templates",
      response_body: "*"
    };
  }

  rpc GetTemplate (GetTemplateRequest) returns (GetTemplateReply) {
    option (google.api.http) = {
      get: "/configure/v1/template",
    };
  }

  rpc CurrentTemplate (CurrentTemplateRequest) returns (CurrentTemplateReply) {
    option (google.api.http) = {
      get: "/configure/v1/template/current",
    };
  }

  rpc AddTemplate (AddTemplateRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/configure/v1/template",
      body:"*"
    };
  }

  rpc SwitchTemplate (SwitchTemplateRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/configure/v1/template/switch",
      body:"*"
    };
  }

  rpc CompareTemplate (CompareTemplateRequest) returns (CompareTemplateReply) {
    option (google.api.http) = {
      post: "/configure/v1/template/compare",
      body:"*",
    };
  }

  rpc ParseTemplatePreview (ParseTemplatePreviewRequest) returns (ParseTemplatePreviewReply) {
    option (google.api.http) = {
      post: "/configure/v1/template/preview",
      body:"*"
    };
  }

  rpc ParseTemplate (ParseTemplateRequest) returns (ParseTemplateReply) {
    option (google.api.http) = {
      post: "/configure/v1/template/parse",
      body:"*"
    };
  }

  rpc GetConfigure (GetConfigureRequest) returns (GetConfigureReply) {
    option (google.api.http) = {
      get: "/configure/v1/configure"
    };
  }

  rpc UpdateConfigure (UpdateConfigureRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/configure/v1/configure",
      body:"*"
    };
  }

  rpc CompareConfigure (CompareConfigureRequest) returns (CompareConfigureReply) {
    option (google.api.http) = {
      post: "/configure/v1/configure/compare",
      body:"*",
    };
  }

  rpc WatchConfigure (WatchConfigureRequest) returns (stream WatchConfigureReply);

}